--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
     margin: 0;
     height: 100px;
     padding: 5px 0;
-    background-color: #fffff;
+    background-color: #ffffff;
 }
 
 .top-social {
@@ -80,7 +80,7 @@ h3 {
 #myBtn { /*Botão subir topo*/
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 105px;
     right: 30px;
     z-index: 99;
     font-size: 18px;
@@ -300,7 +300,7 @@ label[for="bt_menu"]{
 
 @media screen and (max-width: 1070px) {
 	.logo {
-		width: 30%;
+		width: 25%;
 	}
 
 	.num {
@@ -309,6 +309,7 @@ label[for="bt_menu"]{
 
     /*INICIO MENU PRINCIOPAL*/
 	label[for="bt_menu"] {
+		font-size: 26px;
 		float: right;
 		padding-top: 20px;
 		margin-right: 10px;
