--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,15 @@ label[for="bt_menu"]{
 .capas {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+	object-fit: cover;
+}
+
+.excluirfoto {
+	position: absolute;
+	z-index: 100;
+	padding: 10px;
+	color: #FFFFFF;
+	font-size: 20px;
 }
 
 @media screen and (max-width: 1070px) {
